Fix many(!) IDE warnings