@@ -18,7 +18,7 @@ public class Day10 extends Day {
     }
 
     private int runLogic(List<String> input, int defaultIterations) {
-        String currentValue = input.get(0);
+        String currentValue = input.getFirst();
         int numOfIterations = Util.getIntValueFromUser("Number of iterations", defaultIterations, io);
 
         for (int i = 0; i < numOfIterations; i++) {
