@@ -7,7 +7,7 @@ import java.util.List;
 public class Day01 extends Day {
 
     public Object part1(List<String> input) {
-        return solveCaptcha(input.get(0), 1);
+        return solveCaptcha(input.getFirst(), 1);
     }
 
     private int solveCaptcha(String captchaInput, int offset) {
@@ -23,7 +23,7 @@ public class Day01 extends Day {
     }
 
     public Object part2(List<String> input) {
-        String captchaInput = input.get(0);
+        String captchaInput = input.getFirst();
         return solveCaptcha(captchaInput, captchaInput.length() / 2);
     }
 
