@@ -32,7 +32,7 @@ public class Day03 extends Day {
     }
 
     private boolean[][] buildTreeMap(List<String> input) {
-        boolean[][] isTree = new boolean[input.get(0).length()][input.size()];
+        boolean[][] isTree = new boolean[input.getFirst().length()][input.size()];
         for (int y = 0; y < input.size(); y++) {
             String currentLine = input.get(y);
             for (int x = 0; x < currentLine.length(); x++) {
